add sand collector. add synthetic wood recipe. change sand richness.

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -13,6 +13,8 @@ sawmill = Sawmill
 homeworld_portal = Homeworld Portal
 farm = Farm
 distillery = Distillery
+sand-source = Sand
+sand-collector = Sand Collector
 
 [item-name]
 homeworld_portal = Homeworld Portal
@@ -57,6 +59,7 @@ fermenting-beer = Fermenting Beer
 fermenting-wine = Fermenting Grapes
 maturing-wine = Maturing Wine
 fill-beer-barrel = Lager Keg
+synthetic-wood = Synthetic Wood
 
 [technology-name]
 agriculture = Agriculture
