homeworld UI needs powered rader to become active

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -6,6 +6,12 @@ duration-normal = Consumption: Normal
 duration-slow = Consumption: Slow
 duration-very-slow = Consumption: Very slow
 duration-super-slow = Consumption: Super slow
+portal-timer-label = Portal opens in:
+homeworld-start-transmission = Sending transmission to homeworld...
+homeworld-lose-transmission = Lost transmission from homeworld.
+homeworld-get-response = Received transmission from homeworld. Portal online.
+population = Population:
+homeworld-first-goal = 1. Send radio transmission to the homeworld.\n2. Collect fish and wood.
 
 [entity-name]
 fishery = Fishery
