Many fixes for factorio 0.12.0

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -12,6 +12,7 @@ homeworld-lose-transmission = Lost transmission from homeworld.
 homeworld-get-response = Received transmission from homeworld. Portal online.
 population = Population:
 homeworld-first-goal = 1. Send radio transmission to the homeworld.\n2. Collect fish and wood.
+homeworld-give-gifts = You have been given some gifts. Collect them at the portal.
 
 [entity-name]
 fishery = Fishery
@@ -70,12 +71,12 @@ synthetic-wood = Synthetic Wood
 [technology-name]
 agriculture = Agriculture
 alcohol-technology = Alcohol technology
-carpentry-masonry = Carpentry and masonry
+carpentry = Carpentry
 
 [technology-description]
 agriculture = Generating the key resources for your homeworld's population
 alcohol-technology = What is life without a good drink?
-carpentry-masonry = Allows the production of building materials so that your homeworld's population can rebuild it's cities
+carpentry = You need to be able to build chairs before you can build cities.
 
 [autoplace-control-names]
 sand = Sand
