--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -22,6 +22,8 @@ farm = Farm
 distillery = Distillery
 sand-source = Sand
 sand-collector = Sand Collector
+terraformer = Terraformer
+seeder = Seeder
 
 [item-name]
 homeworld_portal = Homeworld Portal
@@ -44,14 +46,38 @@ wine = Wine
 vegetables = Vegetables
 meat = Meat
 luxury-meal = Luxury Meal
+terraformer = Terraformer
+seeder = Seeder
+seeder-module-01 = Tree Program 01
+seeder-module-02 = Tree Program 02
+seeder-module-03 = Tree Program 03
+seeder-module-04 = Tree Program 04
+seeder-module-05 = Tree Program 05
+terraform-module-sand = Sand Terraform Program
+terraform-module-grass = Grass Terraform Program
+terraform-module-dirt = Dirt Terraform Program
+terraform-module-stone = Stone Terraform Program
+terraform-module-concrete = Concrete Terraform Program
 
 [entity-description]
 fishery = Place next to a source of water and fish.
 sawmill = Automatically harvests trees around it.
 farm = Yields produce every day. Place on green grass for best soil richness.
 homeworld_portal = Opens another portal to your homeworld. These portals are unstable and not fit for transporting living organisms.
+seeder = Plants trees, requires tree program to operate.
+terraformer = Terraforms the surface, require terraform program to operate.
 
 [item-description]
+seeder-module-01 = Plants tree type 01
+seeder-module-02 = Plants tree type 02
+seeder-module-03 = Plants tree type 03
+seeder-module-04 = Plants tree type 04
+seeder-module-05 = Plants tree type 05
+terraform-module-sand = Terraforms surface to sand
+terraform-module-grass = Terraforms surface to grass
+terraform-module-dirt = Terraforms surface to dirt
+terraform-module-stone = Terraforms surface to stone
+terraform-module-concrete = Terraforms surface to concrete
 
 [item-group-name]
 
@@ -72,11 +98,15 @@ synthetic-wood = Synthetic Wood
 agriculture = Agriculture
 alcohol-technology = Alcohol technology
 carpentry = Carpentry
+terraforming-1 = Terraforming 1
+terraforming-2 = Terraforming 2
 
 [technology-description]
 agriculture = Generating the key resources for your homeworld's population
 alcohol-technology = What is life without a good drink?
 carpentry = You need to be able to build chairs before you can build cities.
+terraforming-1 = The Seeder automatically plants trees. Trees are vital for reducing pollution.
+terraforming-2 = The Terraformer terraforms the surface to a specific biome, as indicated by the input program.
 
 [autoplace-control-names]
 sand = Sand
