--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -6,6 +6,7 @@ duration-normal = Consumption: Normal
 duration-slow = Consumption: Slow
 duration-very-slow = Consumption: Very slow
 duration-super-slow = Consumption: Super slow
+duration-never = Doesn't consume.
 portal-timer-label = Portal opens in:
 homeworld-start-transmission = Sending transmission to homeworld...
 homeworld-lose-transmission = Lost transmission from homeworld.
