add finite water, difficulty and portal sprite

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -15,6 +15,26 @@ population = Population:
 homeworld-first-goal = 1. Send radio transmission to the homeworld.\n2. Collect fish and wood.
 homeworld-give-gifts = You have been given some gifts. Collect them at the portal.
 
+homeworld-difficulty-easy-description-1 = Faster population growth (+100%)
+homeworld-difficulty-easy-description-2 = Slower need consumption (-50%)
+homeworld-difficulty-easy-description-3 = More rewards (+25%)
+homeworld-difficulty-easy-description-4 = Pollution has less effect for farms and fisheries (-50%)
+homeworld-difficulty-easy-description-5 = Infinite water from lakes.
+
+homeworld-difficulty-normal-description-1 = Everything at default values.
+homeworld-difficulty-normal-description-2 = Finite water from lakes.
+
+homeworld-difficulty-hard-description-1 = Slower population growth (-25%) 
+homeworld-difficulty-hard-description-2 = Faster population decline (+100%) 
+homeworld-difficulty-hard-description-3 = Faster need consumption (+100%) 
+homeworld-difficulty-hard-description-4 = Less rewards (-25%)
+homeworld-difficulty-hard-description-5 = Pollution has more effect for farms and fisheries (+30%)
+homeworld-difficulty-hard-description-6 = Finite water from lakes.
+
+homeworld-difficulty-easy-title = Casual
+homeworld-difficulty-normal-title = Balanced
+homeworld-difficulty-hard-title = Marathon
+
 [entity-name]
 fishery = Fishery
 sawmill = Sawmill
@@ -64,7 +84,7 @@ terraform-module-concrete = Concrete Terraform Program
 fishery = Place next to a source of water and fish.
 sawmill = Automatically harvests trees around it.
 farm = Yields produce every day. Place on green grass for best soil richness.
-homeworld_portal = Opens another portal to your homeworld. These portals are unstable and not fit for transporting living organisms.
+homeworld_portal = Opens another portal to your homeworld.
 seeder = Plants trees, requires tree program to operate.
 terraformer = Terraforms the surface, require terraform program to operate.
 
