big rewrite for factorio 0.12.20+

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -1,18 +1,28 @@
-
-duration-super-fast = Consumption: Super fast
-duration-very-fast = Consumption: Very fast
-duration-fast = Consumption: Fast
-duration-normal = Consumption: Normal
-duration-slow = Consumption: Slow
-duration-very-slow = Consumption: Very slow
-duration-super-slow = Consumption: Super slow
-portal-timer-label = Portal opens in:
 homeworld-start-transmission = Sending transmission to homeworld...
 homeworld-lose-transmission = Lost transmission from homeworld.
 homeworld-get-response = Received transmission from homeworld. Portal online.
+
 population = Population:
+tier = Tier:
+
 homeworld-first-goal = 1. Send radio transmission to the homeworld.\n2. Collect fish and wood.
 homeworld-give-gifts = You have been given some gifts. Collect them at the portal.
+homeworld-difficulty-easy-description-1 = Faster population growth (+100%)
+homeworld-difficulty-easy-description-2 = Slower need consumption (-50%)
+homeworld-difficulty-easy-description-3 = More rewards (+25%)
+homeworld-difficulty-easy-description-4 = Pollution has less effect for farms and fisheries (-50%)
+homeworld-difficulty-easy-description-5 = Infinite water from lakes.
+homeworld-difficulty-normal-description-1 = Everything at default values.
+homeworld-difficulty-normal-description-2 = Finite water from lakes.
+homeworld-difficulty-hard-description-1 = Slower population growth (-25%)
+homeworld-difficulty-hard-description-2 = Faster population decline (+100%)
+homeworld-difficulty-hard-description-3 = Faster need consumption (+100%)
+homeworld-difficulty-hard-description-4 = Less rewards (-25%)
+homeworld-difficulty-hard-description-5 = Pollution has more effect for farms and fisheries (+30%)
+homeworld-difficulty-hard-description-6 = Finite water from lakes.
+homeworld-difficulty-easy-title = Casual
+homeworld-difficulty-normal-title = Balanced
+homeworld-difficulty-hard-title = Marathon
 
 [entity-name]
 fishery = Fishery
@@ -22,6 +32,8 @@ farm = Farm
 distillery = Distillery
 sand-source = Sand
 sand-collector = Sand Collector
+terraformer = Terraformer
+seeder = Seeder
 
 [item-name]
 homeworld_portal = Homeworld Portal
@@ -44,14 +56,38 @@ wine = Wine
 vegetables = Vegetables
 meat = Meat
 luxury-meal = Luxury Meal
+terraformer = Terraformer
+seeder = Seeder
+seeder-module-01 = Tree Program 01
+seeder-module-02 = Tree Program 02
+seeder-module-03 = Tree Program 03
+seeder-module-04 = Tree Program 04
+seeder-module-05 = Tree Program 05
+terraform-module-sand = Sand Terraform Program
+terraform-module-grass = Grass Terraform Program
+terraform-module-dirt = Dirt Terraform Program
+terraform-module-stone = Stone Terraform Program
+terraform-module-concrete = Concrete Terraform Program
 
 [entity-description]
-fishery = Place next to a source of water and fish.
+fishery = Place inside a lake or ocean with fish.
 sawmill = Automatically harvests trees around it.
-farm = Yields produce every day. Place on green grass for best soil richness.
-homeworld_portal = Opens another portal to your homeworld. These portals are unstable and not fit for transporting living organisms.
+farm = Place on green grass near water for the best yield.
+homeworld_portal = Opens a portal to your homeworld that can transfer items.
+seeder = Plants trees, requires tree program to operate.
+terraformer = Terraforms the surface, require terraform program to operate.
 
 [item-description]
+seeder-module-01 = Plants tree type 01
+seeder-module-02 = Plants tree type 02
+seeder-module-03 = Plants tree type 03
+seeder-module-04 = Plants tree type 04
+seeder-module-05 = Plants tree type 05
+terraform-module-sand = Terraforms surface to sand
+terraform-module-grass = Terraforms surface to grass
+terraform-module-dirt = Terraforms surface to dirt
+terraform-module-stone = Terraforms surface to stone
+terraform-module-concrete = Terraforms surface to concrete
 
 [item-group-name]
 
@@ -72,11 +108,15 @@ synthetic-wood = Synthetic Wood
 agriculture = Agriculture
 alcohol-technology = Alcohol technology
 carpentry = Carpentry
+terraforming-1 = Terraforming 1
+terraforming-2 = Terraforming 2
 
 [technology-description]
-agriculture = Generating the key resources for your homeworld's population
-alcohol-technology = What is life without a good drink?
-carpentry = You need to be able to build chairs before you can build cities.
+agriculture = The science of farming and the cultivation of animals.
+alcohol-technology = Unlocks the technology to create a psychoactive drug used for recreation.
+carpentry = Creating useful objects out of raw wood.
+terraforming-1 = The Seeder automatically plants trees. Trees are vital for reducing pollution.
+terraforming-2 = The Terraformer terraforms the surface to a specific biome, as indicated by the input program.
 
 [autoplace-control-names]
 sand = Sand
