Add belt gate and throughput monitor

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -11,11 +11,14 @@ sand-source = Sand
 sand-collector = Sand Collector
 terraformer = Terraformer
 seeder = Seeder
+belt_gate = Belt Gate
+belt_throughput_reader = Belt Throughput Monitor
 
 [item-name]
 homeworld_portal = Homeworld Portal
 fishery = Fishery
 sawmill = Sawmill
+sawmill-tree = Tree
 farm = Farm
 sand = Sand
 glass = Glass
@@ -35,6 +38,8 @@ meat = Meat
 luxury-meal = Luxury Meal
 terraformer = Terraformer
 seeder = Seeder
+belt_gate = Belt Gate
+belt_throughput_reader = Belt Throughput Monitor
 seeder-module-01 = Tree Program 01
 seeder-module-02 = Tree Program 02
 seeder-module-03 = Tree Program 03
@@ -53,6 +58,8 @@ farm = Place on green grass near water for the best yield.
 homeworld_portal = Opens a portal to your homeworld that can transfer items.
 seeder = Plants trees, requires tree program to operate.
 terraformer = Terraforms the surface, require terraform program to operate.
+belt_gate = Toggles the direction items go based upon the circuit condition.
+belt_throughput_reader = Monitors and signals how many items per minute pass through.
 
 [item-description]
 seeder-module-01 = Plants tree type 01
