Bug fixes and Usability improvements
Seeder
- No longer crashes game when resource slot is empty and at the
beginning of planting cycle
- Makes trees when resource slot is empty
- Recipes are now hidden, and craft nothing instead of a log
- Increased tree spawning rate. Min 10 trees, Max 25 trees per module

Terraformer
- Recipes are now hidden and produce nothing instead of a plastic bar.

Farm
- Farm starts next growing cycle immediately when inventory is empty
- Added a growth percentage to farm GUI

Sawmill
- Hide recipes

Items/Recipes
- Reorder in crafting menu
- Rename fluid crafting names to name of product instead of 'process'
involved.

Other bugs
- Buildings placed by robots now initialize properly

Known bugs that have not been fixed yet:

- Farm window + farm GUI closes when farm gui changes
- Farms in blueprints that are not empty e.g. show something growing
will not be placed because it is a different building that what can be
crafted
- Homeworld portals that are not the newest one built will not show GUI
because the actor is replaced
- Homeworld portal reward chests appear at 2nd newest homeworld portal
instead of newest.

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -6,6 +6,10 @@ fishery = Fishery
 sawmill = Sawmill
 homeworld_portal = Homeworld Portal
 farm = Farm
+farm_01 = Farm
+farm_02 = Farm
+farm_03 = Farm
+farm_full = Farm
 distillery = Distillery
 sand-source = Sand
 sand-collector = Sand Collector
@@ -81,10 +85,10 @@ beer-fluid = Beer
 wine-fluid = Wine
 
 [recipe-name]
-mashing-beer = Mashing
-fermenting-beer = Fermenting Beer
-fermenting-wine = Fermenting Grapes
-maturing-wine = Maturing Wine
+mashing-beer = Ethanol
+fermenting-beer = Beer
+fermenting-wine = Wine
+maturing-wine = Bottled Wine
 fill-beer-barrel = Lager Keg
 synthetic-wood = Synthetic Wood
 
