fix "unknown key" error for technology names and descriptions

--- a/locale/en/base.cfg
+++ b/locale/en/base.cfg
@@ -96,8 +96,7 @@ synthetic-wood = Synthetic Wood
 agriculture = Agriculture
 alcohol-technology = Alcohol technology
 carpentry = Carpentry
-terraforming-1 = Terraforming 1
-terraforming-2 = Terraforming 2
+terraforming = Terraforming
 
 [technology-description]
 agriculture = The science of farming and the cultivation of animals.
